# lab04.0

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  ci.yaml.save
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/formatter_ex/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
